--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   lottie: ^2.2.0
   pull_to_refresh: ^2.0.0
   flutter_local_notifications: ^13.0.0
+  shared_preferences: ^2.0.20
   carousel_slider: ^4.2.1
 
 dev_dependencies:
