--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   shared_preferences: ^2.0.20
   carousel_slider: ^4.2.1
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
